@@ -61,7 +61,7 @@ EOW
     }
 
 
-    # This section was automatically generated by Dist::Zilla::Plugin::ModuleBuild v5.039.
+    # This section was automatically generated by Dist::Zilla::Plugin::ModuleBuild v5.040.
     use strict;
     use warnings;
 
@@ -77,7 +77,7 @@ EOW
         "Dan Book <dbook\@cpan.org>"
       ],
       "dist_name" => "Mojo-SQLite",
-      "dist_version" => "0.018",
+      "dist_version" => "0.019",
       "license" => "artistic_2",
       "module_name" => "Mojo::SQLite",
       "recursive_test_files" => 1,
