@@ -1,4 +1,8 @@
 {{$NEXT}}
+  - Added support for removing all subscribers of a channel at once in unlisten
+    method in Mojo::SQLite::PubSub
+  - Mojo::SQLite::Migrations now throws an error if the currently active
+    version is greater than the latest version
 
 0.018     2015-09-21 13:44:30 EDT
   - Fixes for tests under win32
